# raketto_protocol

./: .gitignore  Makefile  README.md  buf.yaml
proto/org/archprotogens/raketto/auth/v1/: auth.proto
proto/org/archprotogens/raketto/channel/v1/: advanced.proto  channel.proto
proto/org/archprotogens/raketto/character/v1/: character.proto  profile.proto  status.proto
proto/org/archprotogens/raketto/message/v1/: message.proto
proto/org/archprotogens/raketto/realtime/v1/: connection.proto  events.proto  websocket.proto
proto/org/archprotogens/raketto/security/v1/: security.proto
proto/org/archprotogens/raketto/user/v1/: user.proto
proto/org/archprotogens/raketto/utils/v1/: numstr.proto
template/cpp/: CMakeLists.txt
template/dart/: pubspec.yaml
template/go/: go.mod
template/js/: index.js  package.json
template/ts/: index.ts  package.json  tsconfig.json
